--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.2"
+    "@iconify-json/mdi": "^1.2.3",
+    "@sanity/astro": "^3.2.10",
+    "@sanity/client": "^7.8.2",
+    "@sanity/image-url": "^1.1.0",
+    "astro": "^5.13.2",
+    "astro-icon": "^1.1.5",
+    "groq": "^4.4.1"
   }
 }
