--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@iconify-json/mdi": "^1.2.3",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.8.2",
     "@sanity/image-url": "^1.1.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
     "astro": "^5.13.2",
     "astro-icon": "^1.1.5",
-    "groq": "^4.4.1"
+    "framer-motion": "^12.23.12",
+    "groq": "^4.4.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
